[metanorma] Convert references to auto-fetch (in order to display full information)

--- a/src/drbg/sections/98-references.adoc
+++ b/src/drbg/sections/98-references.adoc
@@ -5,6 +5,7 @@
 * [[[RFC2119,RFC 2119]]]
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
+* [[[SP800-90A,NIST SP 800-90A]]]
 
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
@@ -32,9 +33,3 @@ contributor.organization.abbreviation:: NIST
 date::
 date.type:: published
 date.value:: 2019-07-01
-
-[%bibitem]
-=== SP800-90A Spec
-id:: SP800-90A
-docid::
-  id::: NIST SP 800-90A
