--- a/src/ecdsa/sections/98-references.adoc
+++ b/src/ecdsa/sections/98-references.adoc
@@ -6,6 +6,11 @@
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
 
+* [[[FIPS186-4,NIST FIPS 186-4]]]
+* [[[FIPS186-5,NIST FIPS 186-5]]]
+* [[[SP800-89,NIST SP 800-89]]]
+* [[[SP800-106,NIST SP 800-106]]]
+
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
 id:: ACVP
@@ -32,83 +37,3 @@ contributor.organization.abbreviation:: NIST
 date::
 date.type:: published
 date.value:: 2019-07-01
-
-[%bibitem]
-=== FIPS Pub 186-4 - Digital Signature Standard (DSS)
-id:: FIPS186-4
-docid::
-  id::: FIPS186-4
-
-// ++++
-//
-//
-// <front>
-// <title>Digital Signature Standard (DSS)</title>
-//
-// <author>
-// <organization>NIST</organization>
-// </author>
-// <date month="July" year="2013"></date>
-// </front>
-// ++++
-
-
-[%bibitem]
-=== SP800-89 - Recommendation for Obtaining Assurances for Digital Signature Applications
-id:: SP800-89
-docid::
-  id::: SP800-89
-
-// ++++
-//
-// <front>
-// <title>Recommendation for Obtaining Assurances for Digital Signature Applications </title>
-//
-// <author>
-// <organization>NIST</organization>
-// </author>
-//
-// <date month="July" year="2013"></date>
-// </front>
-//
-//
-// ++++
-
-[%bibitem]
-=== SP800-106 - Randomized Hashing for Digital Signatures
-id:: SP800-106
-docid::
-  id::: SP800-106
-
-// ++++
-//
-// <front>
-// <title>Randomized Hashing for Digital Signatures</title>
-//
-// <author>
-// <organization>NIST</organization>
-// </author>
-//
-// <date month="February" year="2009"></date>
-// </front>
-//
-// ++++
-
-[%bibitem]
-=== FIPS Pub 186-5 - Digital Signature Standard (DSS)
-id:: FIPS186-5
-docid::
-  id::: FIPS186-5
-
-// ++++
-//
-//
-// <front>
-// <title>Digital Signature Standard (DSS)</title>
-//
-// <author>
-// <organization>NIST</organization>
-// </author>
-// <date month="July" year="2013"></date>
-// </front>
-// ++++
