--- a/src/kas/sp800-56ar2/ecc/sections/98-references.adoc
+++ b/src/kas/sp800-56ar2/ecc/sections/98-references.adoc
@@ -5,6 +5,9 @@
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
 
+* [[[FIPS186-4,NIST FIPS 186-4]]]
+* [[[SP800-56Ar2,NIST SP 800-56A Rev. 2]]]
+
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
 id:: ACVP
@@ -37,56 +40,3 @@ contributor.organization.abbreviation:: NIST
 date::
 date.type:: published
 date.value:: 2019-07-01
-
-
-[%bibitem]
-=== FIPS 186-4 Digital Signature Standard (DSS)
-id:: FIPS186-4
-link::
-link.type:: src
-link.content:: https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.186-4.pdf
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2013-07
-
-
-[%bibitem]
-=== SP800-56Ar2 Recommendation for Pair-Wise Key-Establishment Schemes Using Discrete Logarithm Cryptography
-id:: SP800-56Ar2
-link::
-link.type:: src
-link.content:: https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-56Ar2.pdf
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: E.
-contributor.person.name.surname:: Barker
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: L.
-contributor.person.name.surname:: Chen
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: A.
-contributor.person.name.surname:: Roginsky
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: M.
-contributor.person.name.surname:: Smid
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2013-05
