--- a/src/kas/sp800-56br2/ssc/sections/98-references.adoc
+++ b/src/kas/sp800-56br2/ssc/sections/98-references.adoc
@@ -8,6 +8,8 @@
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
 
+* [[[SP800-56Br2,NIST SP 800-56B Rev. 2]]]
+
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
 id:: ACVP
@@ -36,46 +38,3 @@ date::
 date.type:: published
 date.value:: 2019-07-01
 
-[%bibitem]
-=== SP800-56Br2 Recommendation for Pair-Wise Key-Establishment Schemes Using Discrete Logarithm Cryptography
-id:: SP800-56Br2
-link::
-link.type:: src
-link.content:: https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-56Br2.pdf
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: E.
-contributor.person.name.surname:: Barker
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: L.
-contributor.person.name.surname:: Chen
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: R.
-contributor.person.name.surname:: Davis
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: A.
-contributor.person.name.surname:: Roginsky
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: S.
-contributor.person.name.surname:: Simon
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: A.
-contributor.person.name.surname:: Vassilev
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2019-03
