--- a/src/mac/sections/98-references.adoc
+++ b/src/mac/sections/98-references.adoc
@@ -6,6 +6,11 @@
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
 
+* [[[FIPS-198-1,NIST FIPS 198-1]]]
+* [[[SP800-38B,NIST SP 800-38B]]]
+* [[[SP800-38D,NIST SP 800-38D]]]
+
+
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
 id:: ACVP
@@ -48,24 +53,6 @@ docid::
 //     </author>
 
 //     <date year="2011"></date>
-//   </front>
-// </reference>
-
-[%bibitem]
-=== The Keyed-Hash Message Authentication Code (HMAC)
-id:: FIPS-198-1
-docid::
-  id::: FIPS 198-1
-
-// <reference anchor="FIPS-198-1" target="https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.198-1.pdf">
-//   <front>
-//     <title>The Keyed-Hash Message Authentication Code (HMAC)</title>
-
-//     <author surname="NIST">
-//       <organization>NIST</organization>
-//     </author>
-
-// 	<date month="July" year="2008"></date>
 //   </front>
 // </reference>
 
@@ -123,38 +110,3 @@ docid::
 //   </front>
 // </reference>
 
-[%bibitem]
-=== Recommendation for Block Cipher Modes of Operation: The CMAC Mode for Authentication
-id:: SP-800-38B
-docid::
-  id::: NIST SP 800-38B
-
-// <reference anchor="SP-800-38B" target="https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-38b.pdf">
-//   <front>
-//     <title>Recommendation for Block Cipher Modes of Operation: The CMAC Mode for Authentication</title>
-
-//     <author initials="M." surname="Dworkin">
-//       <organization>NIST</organization>
-//     </author>
-
-// 	<date month="May" year="2005"></date>
-//   </front>
-// </reference>
-
-[%bibitem]
-=== Recommendation for Block Cipher Modes of Operation: Galois/Counter Mode (GCM) and GMAC
-id:: SP-800-38D
-docid::
-  id::: NIST SP 800-38D
-
-// <reference anchor="SP-800-38D" target="https://nvlpubs.nist.gov/nistpubs/Legacy/SP/nistspecialpublication800-38d.pdf">
-//   <front>
-//     <title>Recommendation for Block Cipher Modes of Operation: Galois/Counter Mode (GCM) and GMAC</title>
-
-//     <author initials="M." surname="Dworkin">
-//       <organization>NIST</organization>
-//     </author>
-
-// 	<date month="November" year="2007"></date>
-//   </front>
-// </reference>
