--- a/src/rsa/sections/98-references.adoc
+++ b/src/rsa/sections/98-references.adoc
@@ -7,6 +7,14 @@
 * [[[RFC8174,RFC 8174]]]
 * [[[RFC3447,RFC 3447]]]
 
+* [[[FIPS186-2,NIST FIPS 186-2]]]
+* [[[FIPS186-4,NIST FIPS 186-4]]]
+* [[[FIPS186-5,NIST FIPS 186-5]]]
+* [[[SP800-106,NIST SP 800-106]]]
+* [[[SP800-131A,NIST SP 800-131A]]]
+* [[[SP800-56B,NIST SP 800-56B]]]
+
+
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
 id:: ACVP
@@ -33,123 +41,3 @@ contributor.organization.abbreviation:: NIST
 date::
 date.type:: published
 date.value:: 2019-07-01
-
-[%bibitem]
-=== FIPS PUB 186-2 Digital Signature Standard (DSS)
-id:: FIPS186-2
-docid::
-  id::: FIPS186-2
-
-// <reference anchor="FIPS186-2" target="https://csrc.nist.gov/csrc/media/publications/fips/186/2/              archive/2000-01-27/documents/fips186-2.pdf">
-//   <front>
-//     <title>FIPS PUB 186-2 Digital Signature Standard (DSS)</title>
-
-//     <author surname="NIST">
-//       <organization>NIST</organization>
-// 	</author>
-
-// 	<date month="January" year="2000"></date>
-//   </front>
-// </reference>
-
-[%bibitem]
-=== FIPS PUB 186-4 Digital Signature Standard (DSS)
-id:: FIPS186-4
-docid::
-  id::: FIPS186-4
-
-// <reference anchor="FIPS186-4" target="http://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.186-4.pdf">
-//   <front>
-//     <title>FIPS PUB 186-4 Digital Signature Standard (DSS)</title>
-
-//     <author surname="NIST">
-//       <organization>NIST</organization>
-// 	</author>
-
-// 	<date month="July" year="2013"></date>
-//   </front>
-// </reference>
-
-[%bibitem]
-=== Draft FIPS PUB 186-5 Digital Signature Standard (DSS)
-id:: FIPS186-5
-docid::
-  id::: FIPS186-5
-
-// <reference anchor="FIPS186-5" target="http://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.186-5-Draft.pdf">
-//   <front>
-//     <title>Draft FIPS PUB 186-5 Digital Signature Standard (DSS)</title>
-
-//     <author surname="NIST">
-//       <organization>NIST</organization>
-// 	</author>
-
-// 	<date month="October" year="2019"></date>
-//   </front>
-// </reference>
-
-[%bibitem]
-=== Randomized Hashing for Digital Signatures
-id:: SP800-106
-docid::
-  id::: SP800-106
-
-// <reference anchor="SP800-106" target="https://nvlpubs.nist.gov/nistpubs/Legacy/SP/              nistspecialpublication800-106.pdf">
-//   <front>
-//     <title>Randomized Hashing for Digital Signatures</title>
-
-//     <author surname="NIST">
-//       <organization>NIST</organization>
-// 	</author>
-
-// 	<date month="February" year="2009"></date>
-//   </front>
-// </reference>
-
-[%bibitem]
-=== Transitions: Recommendation for Transitioning the Use of Cryptographic Algorithms and Key Lengths, Revision 1
-id:: SP800-131A
-docid::
-  id::: SP800-131A
-
-// <reference anchor="SP800-131A" target="http://nvlpubs.nist.gov/nistpubs/SpecialPublications/              NIST.SP.800-131Ar1.pdf">
-//   <front>
-//     <title>Transitions: Recommendation for Transitioning the Use of Cryptographic Algorithms and Key Lengths, Revision 1</title>
-
-//     <author initials="E." surname="Barker">
-//       <organization>NIST</organization>
-//     </author>
-
-//     <author initials="A." surname="Roginsky">
-//       <organization>NIST</organization>
-//     </author>
-
-// 	<date month="November" year="2015"></date>
-//   </front>
-// </reference>
-
-[%bibitem]
-=== Recommendation for Pair-Wise Key-Esablishment Schems Using Integer Factorization Cryptography, Revision 1
-id:: SP800-56B
-docid::
-  id::: SP800-56B
-
-// <reference anchor="SP800-56B" target="http://nvlpubs.nist.gov/nistpubs/SpecialPublications/              NIST.SP.800-56Br1.pdf">
-//   <front>
-//     <title>Recommendation for Pair-Wise Key-Esablishment Schems Using Integer Factorization Cryptography, Revision 1</title>
-
-//     <author initials="E." surname="Barker">
-//       <organization>NIST</organization>
-//     </author>
-
-//     <author initials="L." surname="Chen">
-//       <organization>NIST</organization>
-//     </author>
-
-// 	<author initials="D." surname="Moody">
-//       <organization>NIST</organization>
-//     </author>
-
-// 	<date month="September" year="2014"></date>
-//   </front>
-// </reference>
