--- a/src/sha/sections/98-references.adoc
+++ b/src/sha/sections/98-references.adoc
@@ -6,6 +6,8 @@
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
 
+* [[[FIPS180-4,NIST FIPS 180-4]]]
+
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
 id:: ACVP
@@ -32,24 +34,6 @@ contributor.organization.abbreviation:: NIST
 date::
 date.type:: published
 date.value:: 2019-07-01
-
-[%bibitem]
-=== Secure Hash Standard (SHS)
-id:: FIPS180-4
-docid::
-  id::: FIPS 180-4
-
-// <reference anchor="FIPS180-4" target="https://csrc.nist.gov/csrc/media/publications/fips/180/4/archive/2012-03-06/documents/fips180-4.pdf">
-//   <front>
-//     <title>Secure Hash Standard (SHS)</title>
-
-//     <author surname="NIST">
-//       <organization>NIST</organization>
-// 	</author>
-
-// 	<date month="August" year="2015"></date>
-//   </front>
-// </reference>
 
 [%bibitem]
 === The Secure Hash Algorithm Validation System (SHAVS)
