--- a/src/symmetric/sections/98-references.adoc
+++ b/src/symmetric/sections/98-references.adoc
@@ -4,6 +4,17 @@
 * [[[RFC2119,RFC 2119]]]
 * [[[RFC8174,RFC 8174]]]
 
+* [[[AES-XTS,IEEE 1619-2007]]]
+* [[[FIPS-197,NIST FIPS 197]]]
+* [[[SP800-38A,NIST SP 800-38A]]]
+
+* [[[SP800-38C,NIST SP 800-38C]]]
+* [[[SP800-38D,NIST SP 800-38D]]]
+* [[[SP800-38E,NIST SP 800-38E]]]
+* [[[SP800-38F,NIST SP 800-38F]]]
+* [[[SP800-67r2,NIST SP 800-67 Rev. 2]]]
+
+
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
 id:: ACVP
@@ -63,53 +74,6 @@ date::
 date.type:: published
 date.value:: 2018
 
-[%bibitem]
-=== The XTS-AES Tweakable Block Cipher
-id:: AES-XTS
-docid::
-  id::: AES-XTS
-contributor::
-contributor.role:: author
-contributor.person.name.surname:: IEEE Std
-contributor.person.affiliation.organization.name:: IEEE
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: Institute of Electrical and Electronics Engineers, Inc.
-contributor.organization.abbreviation:: IEEE
-date::
-date.type:: published
-date.value:: 2008
-
-[%bibitem]
-=== Specification for the Advanced Encryption Standard (AES)
-id:: FIPS-197
-docid::
-  id::: FIPS-197
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2001
-
-[%bibitem]
-=== SP800-38A Recommendation for Block Cipher Modes of Operation: Methods and Techniques
-id:: SP800-38A
-docid::
-  id::: SP800-38A
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: M.
-contributor.person.name.surname:: Dworkin
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2001
 
 [%bibitem]
 === SP800-38A Addendum Recommendation for Block Cipher Modes of Operation: Three Variants of Ciphertext Stealing for CBC Mode
@@ -128,96 +92,6 @@ contributor.organization.abbreviation:: NIST
 date::
 date.type:: published
 date.value:: 2010
-
-[%bibitem]
-=== SP800-38C Recommendation for Block Cipher Modes of Operation: The CCM Mode for Authentication and Confidentiality
-id:: SP800-38C
-docid::
-  id::: SP800-38C
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: M.
-contributor.person.name.surname:: Dworkin
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2004
-
-[%bibitem]
-=== SP800-38D Recommendation for Block Cipher Modes of Operation: Galois/Counter Mode (GCM) and GMAC
-id:: SP800-38D
-docid::
-  id::: SP800-38D
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: M.
-contributor.person.name.surname:: Dworkin
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2007
-
-[%bibitem]
-=== SP800-38E Recommendation for Block Cipher Modes of Operation: The XTS-AES Mode for Confidentiality on Storage Devices
-id:: SP800-38E
-docid::
-  id::: SP800-38E
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: M.
-contributor.person.name.surname:: Dworkin
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2010
-
-[%bibitem]
-=== SP800-38F Recommendataion for Block Cipher Modes of Operation: Methods for Key Wrapping
-id:: SP800-38F
-docid::
-  id::: SP800-38F
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: M.
-contributor.person.name.surname:: Dworkin
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2012-12
-
-[%bibitem]
-=== SP800-67r2 Recommendation for the Triple Data Encryption Algorithm (TDEA) Block Cipher
-id:: SP800-67r2
-docid::
-  id::: SP800-67r2
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: E.
-contributor.person.name.surname:: Barker
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2017
 
 [%bibitem]
 === ECMA-368 High Rate Ultra Wideband PHY and MAC Standard
