--- a/src/xof/sections/98-references.adoc
+++ b/src/xof/sections/98-references.adoc
@@ -5,6 +5,8 @@
 * [[[RFC2119,RFC 2119]]]
 * [[[RFC8174,RFC 8174]]]
 
+* [[[SP800-185,NIST SP 800-185]]]
+
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
 id:: ACVP
@@ -34,34 +36,3 @@ contributor.organization.abbreviation:: NIST
 date::
 date.type:: published
 date.value:: 2019-07-01
-
-[%bibitem]
-=== SP800-185 SHA-3 Derived Functions: cSHAKE, KMAC, TupleHash and ParallelHash
-id:: SP800-185
-docid::
-    id::: SP800-185
-link::
-link.type:: src
-link.content:: https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-185.pdf
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: S.
-contributor.person.name.surname:: Chang
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: J.
-contributor.person.name.surname:: Kelsey
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: R.
-contributor.person.name.surname:: Perlner
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2016-12
