--- a/src/conditioning-components/sections/98-references.adoc
+++ b/src/conditioning-components/sections/98-references.adoc
@@ -5,6 +5,7 @@
 * [[[RFC2119,RFC 2119]]]
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
+* [[[SP800-90B,NIST SP 800-90B]]]
 
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
@@ -32,9 +33,3 @@ contributor.organization.abbreviation:: NIST
 date::
 date.type:: published
 date.value:: 2019-07-01
-
-[%bibitem]
-=== SP800-90B Spec
-id:: SP800-90B
-docid::
-  id::: SP800-90B
