--- a/src/kas/sp800-56cr1/onestep/sections/98-references.adoc
+++ b/src/kas/sp800-56cr1/onestep/sections/98-references.adoc
@@ -5,6 +5,11 @@
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
 
+* [[[SP800-108,NIST SP 800-108]]]
+* [[[SP800-56Ar3,NIST SP 800-56A Rev. 3]]]
+* [[[SP800-56Cr1,NIST SP 800-56C Rev. 1]]]
+
+
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
 id:: ACVP
@@ -17,96 +22,3 @@ contributor.person.affiliation.organization.abbreviation:: HII
 date::
 date.type:: published
 date.value:: 2020-07-14
-
-[%bibitem]
-=== SP800-108 Recommendation for Key Derivation Using Pseudorandom Functions
-id:: SP800-108
-link::
-link.type:: src
-link.content:: https://nvlpubs.nist.gov/nistpubs/Legacy/SP/nistspecialpublication800-108.pdf
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: L.
-contributor.person.name.surname:: Chen
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2009-10
-
-
-[%bibitem]
-=== SP800-56Ar3 Recommendation for Pair-Wise Key-Establishment Schemes Using Discrete Logarithm Cryptography
-id:: SP800-56Ar3
-link::
-link.type:: src
-link.content:: https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-56Ar3.pdf
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: E.
-contributor.person.name.surname:: Barker
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: L.
-contributor.person.name.surname:: Chen
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: A.
-contributor.person.name.surname:: Roginsky
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: A.
-contributor.person.name.surname:: Vassilev
-contributor.person.affiliation.organization.name:: National Institute of Standards and Technology
-contributor.person.affiliation.organization.abbreviation:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: R.
-contributor.person.name.surname:: Davis
-contributor.person.affiliation.organization.name:: National Security Agency
-contributor.person.affiliation.organization.abbreviation:: NSA
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2018-04
-
-
-[%bibitem]
-=== SP800-56Cr1 Recommendation for Key-Derivation Methods in Key-Establishment Schemes
-id:: SP800-56Cr1
-link::
-link.type:: src
-link.content:: https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-56Cr1.pdf
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: E.
-contributor.person.name.surname:: Barker
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: L.
-contributor.person.name.surname:: Chen
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: R.
-contributor.person.name.surname:: Davis
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2018-04
