--- a/src/sha3/sections/98-references.adoc
+++ b/src/sha3/sections/98-references.adoc
@@ -6,6 +6,8 @@
 * [[[RFC7991,RFC 7991]]]
 * [[[RFC8174,RFC 8174]]]
 
+* [[[FIPS202,NIST FIPS 202]]]
+
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
 id:: ACVP
@@ -50,12 +52,6 @@ docid::
 //     <date year="2014"></date>
 //   </front>
 // </reference>
-
-[%bibitem]
-=== SHA-3 Standard: Permutation-Based Hash and Extendable-Output Functions
-id:: FIPS202
-docid::
-  id::: FIPS202
 
 [%bibitem]
 === Extending NIST’s CAVP Testing of Cryptographic Hash Function Implementations
