--- a/src/tls/sections/98-references.adoc
+++ b/src/tls/sections/98-references.adoc
@@ -5,6 +5,8 @@
 * [[[RFC2119,RFC 2119]]]
 * [[[RFC8174,RFC 8174]]]
 
+* [[[SP800-135,NIST SP 800-135 Rev. 1]]]
+
 [%bibitem]
 === Automatic Cryptographic Validation Protocol
 id:: ACVP
@@ -33,21 +35,3 @@ date::
 date.type:: published
 date.value:: 2019-07-01
 
-[%bibitem]
-=== SP800-135r1 Recommendation for Existing Application-Specific Key Derivation Functions
-id:: SP800-135
-link::
-link.type:: src
-link.content:: https://nvlpubs.nist.gov/nistpubs/Legacy/SP/nistspecialpublication800-135r1.pdf
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: Q.
-contributor.person.name.surname:: Dang
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2011-12
