[metanorma] Fix reference to “SP 800-38A-Add”

--- a/src/symmetric/sections/98-references.adoc
+++ b/src/symmetric/sections/98-references.adoc
@@ -6,7 +6,7 @@
 
 * [[[FIPS-197,NIST FIPS 197]]]
 * [[[SP800-38A,NIST SP 800-38A]]]
-
+* [[[SP800-38A-Add,NIST SP 800-38A-Add]]]
 * [[[SP800-38C,NIST SP 800-38C]]]
 * [[[SP800-38D,NIST SP 800-38D]]]
 * [[[SP800-38E,NIST SP 800-38E]]]
@@ -72,23 +72,6 @@ date::
 date.type:: published
 date.value:: 2018
 
-
-[%bibitem]
-[[SP800-38A-Add]]
-=== SP800-38A Addendum Recommendation for Block Cipher Modes of Operation: Three Variants of Ciphertext Stealing for CBC Mode
-docid.id:: SP800-38A-Add
-contributor::
-contributor.role:: author
-contributor.person.name.initial:: M.
-contributor.person.name.surname:: Dworkin
-contributor.person.affiliation.organization.name:: NIST
-contributor::
-contributor.role:: publisher
-contributor.organization.name:: National Institute of Standards and Technology
-contributor.organization.abbreviation:: NIST
-date::
-date.type:: published
-date.value:: 2010
 
 [%bibitem]
 [[ECMA]]
