Creates AES-FF1 / AES-FF3-1 metanorma documents * https://github.com/usnistgov/ACVP-Server/issues/51

--- a/src/draft-celi-acvp-symmetric.adoc
+++ b/src/draft-celi-acvp-symmetric.adoc
@@ -9,7 +9,7 @@
 :submissionType: independent
 :area: Internet
 :intended-series: informational
-:revdate: 2019-02-01
+:revdate: 2020-12-10
 :forename_initials: C.C.
 :lastname: Celi
 :fullname: Christopher Celi
@@ -20,6 +20,16 @@
 :country: United States of America
 :email: christopher.celi@nist.gov
 :role: editor
+:forename_initials_2: R.H.
+:lastname_2: Hammett
+:fullname_2: Russell Hammett
+:organization_2: HII
+:street_2: 302 Sentinel Dr #300
+:city_2: Annapolis Junction
+:code_2: 20701
+:country_2: United States of America
+:email_2: russell.hammett@nist.gov
+:role_2: editor
 :mn-document-class: ietf
 :mn-output-extensions: xml,rfc,txt,html
 
