--- a/src/symmetric/sections/03-supported.adoc
+++ b/src/symmetric/sections/03-supported.adoc
@@ -14,6 +14,8 @@ The following block cipher algorithms *MAY* be advertised by the ACVP compliant 
 * ACVP-AES-CFB8
 * ACVP-AES-CFB128
 * ACVP-AES-CTR
+* ACVP-AES-FF1
+* ACVP-AES-FF3-1
 * ACVP-AES-GCM
 * ACVP-AES-GCM-SIV
 * ACVP-AES-XPN
@@ -38,6 +40,6 @@ The following block cipher algorithms *MAY* be advertised by the ACVP compliant 
 [[conformances]]
 === Supported Conformances
 
-The following conformances *MAY* be advertised by the ACVP compliant cryptogrpahic module:
+The following conformances *MAY* be advertised by the ACVP compliant cryptographic module:
 
 * ACVP-AES-CCM conformance "ECMA" which expands upon AES-CCM and adheres to <<ECMA>>. This conformance changes the supported sizes to accomodate the specific sizes required by the use-case of the algorithm.
