--- a/src/symmetric/sections/04-testtypes.adoc
+++ b/src/symmetric/sections/04-testtypes.adoc
@@ -530,6 +530,16 @@ In <<FIPS-197>>, Section 5.3 defines the inverse cipher for AES. This is not tes
 
 In <<SP800-38E>>, the AES-XTS algorithm is restricted to 2\^20 AES blocks (128-bits each) per key. Due to the size of the data, ACVP does not test the proper usage of a key over such large amounts of data.
 
+[[aes-fp-coverage]]
+==== AES Format Preserving Encryption Requirements Covered
+
+All of <<SP800-38Gr1>> requirements are covered.
+
+[[aes-fp-not-coverage]]
+==== AES Format Preserving Encryption Requirements Not Covered
+
+N/A
+
 [[tdes-coverage]]
 ==== TDES Requirements Covered
 
