--- a/src/symmetric/sections/06-test-vectors.adoc
+++ b/src/symmetric/sections/06-test-vectors.adoc
@@ -22,6 +22,8 @@ Test vector sets *MUST* contain one or many test groups, each sharing similar pr
 | payloadLen| Length of plaintext or ciphertext in bits to use| integer
 | aadLen| Length of AAD in bits to use| integer
 | tagLen| Length of AEAD tag in bits to use| integer
+| alphabet | Characters representing the alphabet in use for the group. AES-FF1 and AES-FF3-1 only. | string
+| radix | The number base in use for the group (should match the number of characters from the alphabet. AES-FF1 and AES-FF3-1 only. | integer
 | testType| The test category type (AFT, MCT or counter). See <<testtypes>> for more information about what these tests do, and how to implement them. | string
 | tests| Array of individual test case JSON objects, which are defined in <<tcjs>>| array of testCase objects
 |===
@@ -49,6 +51,8 @@ The other properties *MAY* appear depending on the algorithm selected for the te
 | AES-CFB1| 128, 192, 256|
 | AES-CFB8| 128, 192, 256|
 | AES-CFB128| 128, 192, 256|
+| AES-FF1| 128, 192, 256|
+| AES-FF3-1| 128, 192, 256|
 | TDES-ECB| | 1, 2
 | TDES-CBC| | 1, 2
 | TDES-CBCI| | 1, 2
@@ -128,6 +132,8 @@ Each test group *SHALL* contain an array of one or more test cases. Each test ca
 | key| Encryption key to use for AES| string (hex)
 | key1, key2, key3| Encryption keys to use for TDES| string (hex)
 | iv| IV to use| string (hex)
+| tweak| tweak used to form an IV for AES-FF1 and AES-FF3-1 | string (hex)
+| tweakLen| length of the tweak for AES-FF1 and AES-FF3-1 | integer
 | tweakValue| tweakValue used to form an IV for AES-XTS when the tweakMode for the group is 'hex'| string (hex)
 | sequenceNumber| integer used to form an IV for AES-XTS when the tweakMode for the group is 'number'| integer
 | salt| The salt to use in AES-XPN (required for AES-XPN only)| string (hex)
