--- a/src/symmetric/sections/98-references.adoc
+++ b/src/symmetric/sections/98-references.adoc
@@ -12,6 +12,7 @@
 * [[[SP800-38D,NIST SP 800-38D]]]
 * [[[SP800-38E,NIST SP 800-38E]]]
 * [[[SP800-38F,NIST SP 800-38F]]]
+* [[[SP800-38Gr1,NIST SP 800-38G Rev. 1]]]
 * [[[SP800-67r2,NIST SP 800-67 Rev. 2]]]
 
 
